various exception fixes (#6044)